# Theophysics-OS-

./: README.md  START_SERVICE_MANAGER.bat  hub.html  pof-service-stack-portable.sha256  pof-service-stack-release.json  service_manager.py
1files/: CHI_BUILD_SPEC.md  server.py
FIS/: .gitignore  INTELLIGENT_FILE_SYSTEM_RULES.md  UNIFIED_APP_MAP.md  api_server.py  background_enrich.py  cluster_engine.py  index.html  intelligence_scorer.py  naming_engine.py  simple.html
FIS/shared/: fingerprint.py
ai-hub-v2-master/ai-hub-v2-master/FIS/: .sortconfig.yaml  APPROVAL_AND_METADATA_RULES.md  FIRST_PRINCIPLES_FILE_ORGANIZATION.md  INTELLIGENCE_SORT_WALKTHROUGH.md  LAUNCH_FILE_SORTER_GUI.bat  NLP_OUTPUT_CONTRACT.md  START_ADVANCED_GUI.bat  START_SIMPLE_GUI.bat  STOP_FILE_SORTER_GUI.bat  api_server.py  auto_sort.py  background_inventory.py  background_inventory_course.py  chi_classifier.py  file-sorter-gui-v2.jsx  file-sorter-v3.jsx  hub_engines.py  index.html  manual_sort.py  nameit.py  nlp_bridge.py  preference_engine.py  simple.html  sorter_cache.py  start_sorter.bat
files/FIle/: index.html
nerve-full-fix-package/: README.md
nerve-full-fix-package/live_install/config/: config.json
nerve-full-fix-package/notes/: NERVE_DEV_NOTES_FROM_LIVE_20260407_173405.md  SESSION_LOG_20260404_OPUS_NerveClipSyncDev.md
nerve-full-fix-package/repo/: .gitignore  CONTRIBUTING.md  Cargo.toml  INSTRUCTIONS.md  README.md  build.bat  package-for-github.ps1
nerve-full-fix-package/repo/crates/win-hotkeys/: Cargo.toml
nerve-full-fix-package/repo/crates/win-hotkeys/src/: lib.rs
nerve-full-fix-package/repo/docs/: ARCHITECTURE.md  HISTORICAL_FIXES.md  PHASE_1_BRIEF.md  REFERENCE_TTS_RS.md
nerve-full-fix-package/repo/html/: clipboard.html  settings.html  shortcuts.html
nerve-full-fix-package/repo/src/: clipboard.rs  config.rs  hotkeys.rs  hotstrings.rs  main.rs  panels.rs  sync_client.rs  tray.rs  tts.rs  window_mgmt.rs
(+84 files in other folders)
