[package]
name = "nerve"
version = "0.1.0"
edition = "2021"

[dependencies]
# Window creation + webview (WebView2 on Windows - no browser overhead)
tao = "0.34"
wry = "0.47"

# System tray
tray-icon = "0.19"

# Global hotkeys
global-hotkey = "0.6"

# Clipboard access
clipboard-win = "5"

# Windows API for keyboard hooks (hotstrings) and window management
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Graphics_Dwm",
    "Win32_Media_Speech",
    "Win32_System_Com",
] }

# Async HTTP for Cloudflare API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# For config file paths
dirs = "6"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

# Hide console window on Windows in release mode
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon"] }
